Might have fixed scroll issues on IPhone.  Might have fixed double tap issue on touch input.

--- a/PersonalWebsite/Shared/NavMenu.razor.css
+++ b/PersonalWebsite/Shared/NavMenu.razor.css
@@ -15,14 +15,18 @@ body {
 }
 
 .nav-container {
-    overflow: hidden;
     height: 100%;
 }
 
-.nav-container-touch {
-    overflow: scroll;
-    -webkit-overflow-scrolling: touch;
+.nav-container-no-touch {
+    overflow: hidden;
 }
+
+.nav-container-touch {
+    overflow: scroll !important;
+    -webkit-overflow-scrolling: touch !important;
+}
+
 
 #nav-container {
     /*border-top: 1px solid #212529b2;*/
